[project]
name = "nsfw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub>=0.17.1"
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "mypy>=1.11.0",
]

[project.scripts]
lint  = "ruff check src --fix && ruff format src"
type  = "mypy src"
check = "ruff check src --fix && ruff format src && mypy src"